usercontroller, JwtProvider, JwtTokenValidation changes

--- a/taskmanager/src/main/resources/application.properties
+++ b/taskmanager/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 server.port= 3232
 
-app.jwtSecret=yourSecretKey
 app.jwtExpirationMs=3600000
 
 spring.data.mongodb.uri=mongodb://localhost:27017/taskmanager
 spring.data.mongodb.database=taskmanager
 
 spring.datasource.hikari.shutdown-timeout=2000
+
+JWT_SECRET_KEY=wpembytrwcvnryxksdbqwjebruyGHyudqgwveytrtrCSnwifoesarjbwe
