"Trying to store the user info in task table "

--- a/taskmanager/src/main/resources/application.properties
+++ b/taskmanager/src/main/resources/application.properties
@@ -2,8 +2,14 @@ server.port= 3232
 
 app.jwtExpirationMs=3600000
 
-spring.data.mongodb.uri=mongodb://localhost:27017/taskmanager
-spring.data.mongodb.database=taskmanager
+spring.datasource.url=jdbc:postgresql://localhost:5432/taskmanager
+spring.datasource.username=postgres
+spring.datasource.password=P@ssw0rd.1
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
 spring.datasource.hikari.shutdown-timeout=2000
 
